doc/0.31/_sources/overview.txt
.. _overview:

Overview
========

The Admarkt Sellside API is a RESTful API to place ads on
Admarkt. The content is provided in JSON format in ``UTF–8`` encoding.

.. _overview_media_types:

Media Types
-----------

Each resource has a specific media type of the following form 
to support *content negotiation* and *versioning*::

    application/sellside.{entity}-{version}+json;charset=UTF-8
    
The ``version`` field is mandatory and currently has the value ``v1`` for all
resources. 

The media type is used for the ``Content-Type`` and ``Accept`` headers.

.. _overview_accept_headers:

Content-Type and Accept Headers
-------------------------------

Every request must set the ``Accept`` header to::

    <Expected Media Type>, application/json

This permits the server to generate the response in the format the caller expects.
``application/json`` is required to return the error response.

Additionally, each ``POST`` and ``PUT`` request must also set the ``Content-Type`` 
header to::

    <Media Type of the body content>

.. _overview_authentication:

Authentication
--------------

Authentication is provided using *OAuth2* to allow easy integration with
existing libraries. For more information please have a look at the `OAuth 2.0
website <http://oauth.net/2/>`_.

.. _overview_customize_response_body:

Customize response body
-----------------------

Every call which returns a response body can have this customized using _include and _exclude parameters. These
parameters define which fields to include in or exclude from the response body. When both _include and _exclude
have a value, the _exclude value will be ignored. By default, _include is set to all fields and _exclude is empty.

Furthermore, some calls allow for a _body parameter, defining whether there should be any data in the response
body at all. Default of _body is true (returning data). When _body is false, _include and _exclude will be ignored.

.. _overview_dates_and_times:

Dates and Times
---------------

All date/time values are specified in
`ISO 8601 Combined date and time in UTC format <http://en.wikipedia.org/wiki/ISO_8601>`_.

.. _overview_prices_and_currencies:

Prices and Currencies
---------------------

All monetary amounts like prices and budgets are currently in Euros and stored as euro cents.
Currencies are specified as three character `ISO 4217 <http://en.wikipedia.org/wiki/ISO_4217>`_ code.

.. _overview_http_response_codes_and_error_handling:

HTTP Response Codes and Error Handling
--------------------------------------

To retrieve, update and delete resources with the Sellside API you use the
standard HTTP verbs ``GET``, ``PUT`` and ``DELETE``. If the resource exists
and the request was successful the server responds with ``200 OK``. If the
resource does not exist the server responds with ``404 Not Found``.

To create a new resource you perform a ``POST`` request to which the server
responds with ``201 Created`` and a ``Location`` header containing the URL of
the new resource.

All requests are validated before they are being executed by the server. If
the validation fails the server responds with ``400 Bad Request`` and an error
response which contains a list of the errors. More information can be found under
:doc:`error-handling`.
